template/bases/service-broker/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: aion-servicebroker
  name: aion-servicebroker
spec:
  selector:
    run: aion-servicebroker
  type: ClusterIP
  ports:
    - name: envoy-admin
      port: 10001
      protocol: TCP
      targetPort: 10001
    - name: envoy-grpc
      port: 10000
      protocol: TCP
      targetPort: 10000
